Add inline favicon and fix isHeaderText ReferenceError

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Bank Statement → CSV/XLSX/XML</title>
+  <!-- Tiny inline favicon to avoid automatic /favicon.ico 404 requests -->
+  <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR4nGNgYAAAAAMAASsJTYQAAAAASUVORK5CYII=">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
