Add parser.js with heuristics, browser tests, and delegate parsing from script.js

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.14.305/pdf.min.js"></script>
   <!-- SheetJS for XLSX export -->
   <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
+  <script src="parser.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
